# WigNado

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.ipynb
.github/workflows/: build-wheels.yml
scripts/: optuna_tune_conversion.py
src/: lib.rs
src/wignado/: __init__.py  _wignado.pyi  cli.py  core.py  engine.py  tiledb.py  utils.py  zarrstore.py
tests/: requirements.txt  test_add.py  test_engine.py
