[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wignado"
version = "0.1.0"
description = "WigNado: mixed Rust/Python genomic toolkit"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

[tool.maturin]
module-name = "wignado._wignado"
bindings = "pyo3"
python-source = "src"

[project.optional-dependencies]
# Extras to enable TileDB-backed functionality and heavy deps
tiledb = ["tiledb", "polars", "pybigtools", "pydantic", "numba", "rich", "loguru", 'typer', "psutil"]

[project.scripts]
wignado = "wignado.cli:main"
